# vlm-viz

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: Dockerfile  README.md  compose-base.yaml  template.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/template-submit-examples/: first-steps.sh  minimal.sh  remote-development.sh  unattended.sh
installation/docker-amd64-cuda/dependencies/: apt-runtime.txt  requirements.txt
installation/docker-amd64-cuda/from-python/: Dockerfile
installation/docker-amd64-cuda/from-scratch/: environment.yml
outputs/: README.md
reproducibility-scripts/: template-experiment.sh  template-sweep.yaml
reproducibility-scripts/finetune-commongen/: params.py  run_eval.py  run_eval.sh  run_sft.sh  run_sft_eval.sh  run_sft_lora.sh  run_sft_unattended.sh  run_training.sh  sft.py  sft_mllm.py
reproducibility-scripts/inference-scripts/: eval_ambient.py  eval_coarsewsd.py  eval_coarsewsd_yn.py  eval_commongen.py  eval_dust.py  eval_harness_loglik.py  eval_harness_mcqa.py  eval_imagen.py  run_all.sh  run_ambient.sh  run_coarsewsd.sh  run_commongen.sh  run_dust.sh  run_harness_acc_loglik.sh  run_harness_loglik.sh  run_harness_mcqa.sh  run_imagen.sh  start.sh  template_experiment.py
template/: template-variables.env
vlm_viz/configs/: setup.yaml
vlm_viz/utils/: __init__.py  eval_utils.py  model_utils.py  patch_models.py
